[package]
name = "psl-codegen"
description = "Generate native Rust code from Mozilla's Public Suffix List"
version = "0.9.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/psl-codegen"
documentation = "https://docs.rs/psl-codegen"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "psl"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0.24"
psl-lexer = "0.3.1"
quote = "1.0.9"
sequence_trie = "0.3.6"
idna = "0.2.2"

[dependencies.syn]
version = "1.0.60"
features = ["full"]
